@@ -5,4 +5,8 @@ Chạy qua ide: Thêm VM option:
 
 --add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls
 
+--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls
+
+--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls
+
 --add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls
